# SXMCP002

./: .env.example  .gitignore  DEMO_QUICK_START.md  LIVE_DEMO.md  README.md  TEST_REPORT.md  agent.py  batch_targets.txt  demo.sh  hazmat  hazmat_cli.py  hazmat_server.py  mock_server.py  pyproject.toml  requirements.txt  run_agent_timeout.sh  sandbox_core.py  smoke_test.py  test_client.py  test_npm_tgz_client.py
.tmp_step7/: malicious_tgz.json  manager_mismatch.json
demo_packages/hazmat-demo-a/: hazmat-demo-a-1.0.2.tgz  index.js  package.json
demo_packages/hazmat-demo-b/: hazmat-demo-b-1.0.2.tgz  index.js  package.json  postinstall.js
demo_packages/hazmat-demo-c/: hazmat-demo-c-1.0.2.tgz  index.js  package.json  postinstall.js
demo_packages/hazmat-demo-d/: hazmat-demo-d-1.0.0.tgz  index.js  package.json  postinstall.js
demo_packages/hazmat-demo-e/: hazmat-demo-e-1.0.0.tgz  index.js  package.json  postinstall.js
demo_packages/react-helper-dom/: postinstall.js
examples/: batch_targets.txt
scripts/: step7_hardening_tests.sh
src/hazmat_mcp/: __init__.py  __main__.py  agent.py  cli.py  server.py
test_packages/benign_pkg/: index.js  package.json
test_packages/malicious_pkg/: index.js  package.json  postinstall.js
tests/: conftest.py  smoke_test.py  test_client.py  test_npm_tgz_client.py
tests/demo_packages/react-helper-dom/: index.js  package.json  react-helper-dom-1.0.0.tgz
tests/scripts/: step7_hardening_tests.sh
tmp-install-test/: package.json
